--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 id="doc-title">Your GPS Statistics</h1>
-    <h2 id="catcher">See where you are.</h2>
+    <h2 id="catcher">See where you are in the world.</h2>
     <div class="stats">
         <div class="get-button">
             <button class="get-info" onclick="getGeolocation()">Get Info</button>
